envoy-poc-locality/run/envoy-config-locality-single-container.yaml
static_resources:
    listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/service/0"
                  route:
                    cluster: local_service_0
                    timeout:
                      seconds: 30
                - match:
                    prefix: "/service/1"
                    headers:
                    - name: x-stay-local
                      present_match: true
                  route:
                    cluster: local_service_1
                - match:
                    prefix: "/service/2"
                    headers:
                    - name: x-stay-local
                      present_match: true
                  route:
                    cluster: local_service_2
                - match:
                    prefix: "/service/3"
                    headers:
                    - name: x-stay-local
                      present_match: true
                  route:
                    cluster: local_service_3
                - match:
                    prefix: "/service/1"
                  route:
                    cluster: service_1
                  request_headers_to_add:
                    - header:
                        key: x-stay-local
                        value: "1"
                - match:
                    prefix: "/service/2"
                  route:
                    cluster: service_2
                  request_headers_to_add:
                    - header:
                        key: x-stay-local
                        value: "2"
                - match:
                    prefix: "/service/3"
                  route:
                    cluster: service_3
                  request_headers_to_add:
                    - header:
                        key: x-stay-local
                        value: "3"
            http_filters:
            - name: envoy.router
    clusters:
    - name: local_service_0
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service_0
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12340
    - name: local_service_1
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service_1
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12341
    - name: service_1
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: service_1
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12341
          #- endpoint:
          #    address:
          #      socket_address:
          #        address: 172.19.0.3
          #        port_value: 80
    - name: local_service_2
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service_2
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12342
    - name: service_2
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: service_2
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12342
          #- endpoint:
          #    address:
          #      socket_address:
          #        address: 172.19.0.3
          #        port_value: 80
    - name: service_3
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: service_3
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12343
          #- endpoint:
          #    address:
          #      socket_address:
          #        address: 172.19.0.3
          #        port_value: 80
    - name: local_service_3
      connect_timeout: 0.20s
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service_3
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 12343
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
